--- a/.jshintrc
+++ b/.jshintrc
@@ -13,6 +13,7 @@
   "globals": {
     "angular": false,
     "$": false,
-    "Firebase": false
+    "Firebase": false,
+    "google": false
   }
 }
