--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,9 @@
     "Ionicons": "ionicons#^2.0.1",
     "angular-materialize": "^0.1.2",
     "angularfire": "^1.1.3",
-    "angular-ui-router": "^0.2.17"
+    "angular-ui-router": "^0.2.17",
+    "underscore": "^1.8.3",
+    "ng-file-model": "*"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
