--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,9 @@
     "ng-file-model": "*"
   },
   "devDependencies": {
-    "angular-mocks": "^1.4.0"
+    "angular-mocks": "^1.4.0",
+    "angular-validation-match": "^1.7.1",
+    "angular-password": "^1.0.1"
   },
   "appPath": "app",
   "moduleName": "webApp"
