--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "web",
   "private": true,
   "devDependencies": {
+    "angular-password": "^1.0.1",
     "autoprefixer-core": "^5.2.1",
     "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.7",
@@ -41,6 +42,7 @@
     "test": "grunt test"
   },
   "dependencies": {
+    "angular-validation-match": "^1.7.1",
     "grunt-karma": "^0.12.1",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.19",
