--- a/bower.json
+++ b/bower.json
@@ -15,12 +15,11 @@
     "angularfire": "^1.1.3",
     "angular-ui-router": "^0.2.17",
     "underscore": "^1.8.3",
-    "ng-file-model": "*"
+    "ng-file-model": "*",
+    "angular-validation-match": "^1.7.1"
   },
   "devDependencies": {
-    "angular-mocks": "^1.4.0",
-    "angular-validation-match": "^1.7.1",
-    "angular-password": "^1.0.1"
+    "angular-mocks": "^1.4.0"
   },
   "appPath": "app",
   "moduleName": "webApp"
